add redis , implement scraping ad envirement variable and update resquirements.txt and move pre-commit config file

--- a/Dashboard/Dockerfile
+++ b/Dashboard/Dockerfile
@@ -1,5 +1,9 @@
 FROM python:3.9
+ARG SCRAPING_URL
+ARG MONGO_URI
 
+ENV SCRAPING_URL=${SCRAPING_URL}
+ENV MONGO_URI=${MONGO_URI}
 COPY . .
 WORKDIR /.
 
