--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.2.0
+    rev: v5.0.0
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
@@ -15,7 +15,7 @@ repos:
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
   # Ruff version.
-    rev: v0.6.3
+    rev: v0.6.9
     hooks:
       # Run the linter.
       - id: ruff
@@ -42,7 +42,7 @@ repos:
 
   #isort: Sorts Python imports according to the defined style, in this case, the "black" profile to make in compatible with the black hook above.
   - repo: https://github.com/pycqa/isort
-    rev: 5.11.5
+    rev: 5.13.2
     hooks:
       - id: isort
         args: [ "--profile", "black" ]
@@ -50,14 +50,14 @@ repos:
 
   #pycln: Removes all unused import statements. Be wild, live a little!
   - repo: https://github.com/hadialqattan/pycln
-    rev: v2.1.1
+    rev: v2.4.0
     hooks:
       - id: pycln
         args: [--all]
 
   #yesqa: Automatically removes unnecessary # noqa comments.
   - repo: https://github.com/asottile/yesqa
-    rev: v1.4.0
+    rev: v1.5.0
     hooks:
       - id: yesqa
         additional_dependencies: &flake8_deps
@@ -66,14 +66,20 @@ repos:
           - flake8-docstrings==1.6.0
 
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v2.35.0
+    rev: v3.29.1
     hooks:
       - id: commitizen
       - id: commitizen-branch
-        stages: [push]
+        stages: [pre-push]
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+    rev: v5.0.0
     hooks:
       - id: check-merge-conflict
       - id: no-commit-to-branch
+
+  # - repo: https://github.com/codecov/pre-commit-codecov
+  #   rev: v2
+  #   hooks:
+  #     - id: codecov
+  #       language_version: python3.11
