--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,8 +1,8 @@
 name: Run tests and upload coverage
 
 on:
-  push
-
+    - push
+    - pull_request
 jobs:
   test:
     name: Run tests and collect coverage
