--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,13 @@
+coverage:
+  status:
+    project: #add everything under here, more options at https://docs.codecov.com/docs/commit-status
+      default:
+        # basic
+        target: auto #default
+        threshold: 0%
+        base: auto
+
+
 comment:                  # This is a top-level key
   layout: "diff, flags, files"
   behavior: default
