--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         pip install pre-commit
         pre-commit install
+        pip install -r requirements.txt
 
     - name: Run tests and upload coverage
       run: |
