--- a/nginx.conf
+++ b/nginx.conf
@@ -1,46 +1,46 @@
 server {
     listen 80;
-    server_name yourdomain.com; # Replace with your domain or use localhost for testing
+    server_name localhost;
 
-    location / {
-        proxy_pass http://dashboard:8501; # Forward requests to the Streamlit dashboard
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+    location /dashboard {
+        proxy_pass http://dashboard:8501 ; # Forward requests to the Streamlit dashboard
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
     }
 
-    location /ingestion {
-        deny all; # Block direct access to the data ingestion service
-        proxy_pass http://data-ingestion:6800; # Forward requests from the dashboard only
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-
-server {
-    listen 443 ssl; # Enable SSL on port 443
-    server_name yourdomain.com; # Replace with your domain
-
-    ssl_certificate /etc/ssl/certs/your_cert.pem; # Path to your SSL certificate
-    ssl_certificate_key /etc/ssl/private/your_key.pem; # Path to your SSL key
-
-    location / {
-        proxy_pass http://dashboard:8501; # Forward requests to the Streamlit dashboard over HTTPS
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /ingestion {
-        deny all; # Block direct access to the data ingestion service
-        proxy_pass http://data-ingestion:6800; # Forward requests from the dashboard only
+    location /api/ingestion/ {
+        proxy_pass http://data-ingestion:6800/ ;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+# server {
+#     listen 443 ssl; # Enable SSL on port 443
+#     server_name data-ingestion:6800; # Replace with your domain
+
+#     ssl_certificate /etc/ssl/certs/your_cert.pem; # Path to your SSL certificate
+#     ssl_certificate_key /etc/ssl/private/your_key.pem; # Path to your SSL key
+
+#     location / {
+#         proxy_pass http://dashboard:8501; # Forward requests to the Streamlit dashboard over HTTPS
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+
+#     location /ingestion {
+#         deny all; # Block direct access to the data ingestion service
+#         proxy_pass http://data-ingestion:6800; # Forward requests from the dashboard only
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+# }
