--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,9 @@ server {
     }
 
     location /api/ingestion/ {
+
+        allow 10.5.0.2 ;
+        # deny all ;
         proxy_pass http://data-ingestion:6800/ ;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
