remove comment in the code, fix bug in compose file

--- a/compose.yaml
+++ b/compose.yaml
@@ -35,6 +35,8 @@ services:
       dockerfile: Dockerfile
       args:
         MONGO_URI: ${MONGO_URI}
+    environment:
+      - MONGO_URI
     expose:
       - "6800"  # Use expose for internal communication only
     networks:
