--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -2,19 +2,44 @@ name: Dev Envirement
 
 on:
     workflow_dispatch:
+    push:
+        branches:
+            - dev
+
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - name: Set up Python 3.11
-              uses: actions/setup-python@v4
-              with:
-                  python-version: 3.11
-            - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  pip install -r requirements.txt
-            - name: Run tests
-              run: python -m pytest
+  build-and-push-docker-image:
+    runs-on: ubuntu-latest
+
+    services:
+      redis:
+        image: redis/redis-stack:latest
+        ports:
+          - 6379:6379
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}  # Add Docker Hub username as a secret
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}  # Add Docker Hub password as a secret
+
+      - name: Build and push Docker images
+        run: |
+          docker build \
+          --build-arg MONGO_URI=${{ secrets.MONGO_URI }} \
+          --build-arg SCRAPING_URI=${{ secrets.SCRAPING_URI }}\
+          -t ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-dashboard:latest
+
+          docker build \
+          --build-arg MONGO_URI=${{ secrets.MONGO_URI }}\
+          -t ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-data-ingestion:latest \
+
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-dashboard:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-data-ingestion:latest
