--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-python@v4
 
       - name: Install dependencies
-        run: pip install pytest pytest-cov streamlit
+        run: pip install -r Dashboard/requirements.txt
 
       - name: Run tests
         run: pytest --cov --cov-report=xml
