--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -8,38 +8,55 @@ on:
 
 
 jobs:
-  build-and-push-docker-image:
+  # build-and-push-docker-image:
+  #   runs-on: ubuntu-latest
+
+  #   services:
+  #     redis:
+  #       image: redis/redis-stack:latest
+  #       ports:
+  #         - 6379:6379
+
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1
+
+  #     - name: Log in to Docker Hub
+  #       uses: docker/login-action@v1
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}  # Add Docker Hub username as a secret
+  #         password: ${{ secrets.DOCKERHUB_PASSWORD }}  # Add Docker Hub password as a secret
+
+  #     - name: Build and push Docker images
+  #       run: |
+  #         docker build \
+  #         --build-arg MONGO_URI="${{ secrets.MONGO_URI }}" \
+  #         --build-arg SCRAPING_URI="${{ secrets.SCRAPING_URI }}" \
+  #         -t ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-dashboard:latest Dashboard/.
+
+  #         docker build \
+  #         --build-arg MONGO_URI="${{ secrets.MONGO_URI }}" \
+  #         -t ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-data-ingestion:latest Data-Ingestion/.
+
+  #         docker push ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-dashboard:latest
+  #         docker push ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-data-ingestion:latest
+
+
+
+  ssh-pull-and-run:
     runs-on: ubuntu-latest
-
-    services:
-      redis:
-        image: redis/redis-stack:latest
-        ports:
-          - 6379:6379
-
+    # needs: build-and-push-docker-image
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}  # Add Docker Hub username as a secret
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}  # Add Docker Hub password as a secret
-
-      - name: Build and push Docker images
+      - name: Create SSH key
         run: |
-          docker build \
-          --build-arg MONGO_URI="${{ secrets.MONGO_URI }}" \
-          --build-arg SCRAPING_URI="${{ secrets.SCRAPING_URI }}" \
-          -t ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-dashboard:latest Dashboard/.
+          mkdir -p ~/.ssh/
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/private.key
+          sudo chmod 600 ~/.ssh/private.key
 
-          docker build \
-          --build-arg MONGO_URI="${{ secrets.MONGO_URI }}" \
-          -t ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-data-ingestion:latest Data-Ingestion/.
-
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-dashboard:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/tuntransport-data-ingestion:latest
+      - name: Copy Docker Compose file and run
+        run: |
+          scp -i ~/.ssh/private.key -P 22 docker-compose.yml ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/.
+          ssh -i ~/.ssh/private.key -p 22 ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "cd /. && docker-compose up -d"
