--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -59,6 +59,7 @@ jobs:
           mkdir -p ~/.ssh/
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/private.key
           sudo chmod 600 ~/.ssh/private.key
+          ssh-keyscan -t rsa "${{ secrets.SERVER_IP }}" >> ~/.ssh/known_hosts
 
 
       - name: Download compose file
