--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -58,7 +58,12 @@ jobs:
         run: |
           mkdir -p ~/.ssh/
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/private.key
-          ssh-keyscan -t rsa "${{ secrets.SERVER_IP }}" >> ~/.ssh/known_hosts
+          ssh-keyscan -t rsa -p 22 "${{ secrets.SERVER_IP }}" >> ~/.ssh/known_hosts
+          chmod 700 ~/.ssh
+          chmod 600 ~/.ssh/private.key
+          chmod 644 ~/.ssh/known_hosts
+
+
 
       - name: Download compose file
         run: |
