--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -62,7 +62,9 @@ jobs:
 
       - name: Add SSH key to known hosts
         run: |
-          ssh-keyscan -t rsa -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+          sudo chmod 644 ~/.ssh/known_hosts
+          ssh-keyscan -t rsa -p 22 -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
+
 
 
 
