--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -62,7 +62,8 @@ jobs:
 
       - name: Add SSH key to known hosts
         run: |
-          sudo chmod 644 ~/.ssh/known_hosts
+          touch ~/.ssh/known_hosts
+          chmod 644 ~/.ssh/known_hosts
           ssh-keyscan -t rsa -p 22 -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
 
 
