--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -63,7 +63,7 @@ jobs:
       - name: Add SSH key to known hosts
         run: |
           chmod 600 ~/.ssh/private.key
-          ssh-keyscan -H your_host >> ~/.ssh/known_hosts || echo "Failed to add host key"
+          ssh-keyscan -H 192.168.100.71 >> ~/.ssh/known_hosts || echo "Failed to add host key"
 
 
 
