--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -54,16 +54,17 @@ jobs:
         uses: actions/checkout@v2
 
 
-      # - name: Saving SSH private key
-      #   run: |
-      #     mkdir -p ~/.ssh/
-      #     echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/private.key
+      - name: Saving SSH private key
+        run: |
+          mkdir -p ~/.ssh/
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/private.key
 
 
-      # - name: Add SSH key to known hosts
-      #   run: |
-      #     chmod 600 ~/.ssh/private.key
-      #     ssh-keyscan -t rsa "192.168.100.71" >> ~/.ssh/known_hosts || echo "Failed to add host key"
+      - name: Add SSH key to known hosts
+        run: |
+          chmod 600 ~/.ssh/private.key
+          sudo ssh-keyscan -t rsa "192.168.100.71" >> ~/.ssh/known_hosts || echo "Failed to add host key"
+          cat ~/.ssh/known_hosts
 
 
 
@@ -74,19 +75,10 @@ jobs:
           cp ./compose.yaml ./compose/
 
 
-      # - name: Copy file to Ubuntu Server
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: compose.yaml
-      #     path: ./compose/compose.yaml
+      - name: Copy Docker Compose file to server
+        run: |
+          scp -i ~/.ssh/private.key -P 22 ./compose/compose.yaml ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }}:/.
 
-      - name: SSH to Ubuntu Server
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          script: |
-            scp -r ./compose/compose.yaml ${{ secrets.SERVER_USER}}@${{ secrets.SERVER_IP }}:/path/to/destination
-            ssh ${{ secrets.SERVER_USER}}@${{ secrets.SERVER_IP }} "docker-compose -f /path/to/destination/compose.yaml up -d"
+      - name: Run Docker Compose
+        run: |
+          ssh -i ~/.ssh/private.key -p 22 ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "cd /. && docker compose up -d"
