--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -64,7 +64,7 @@ jobs:
         run: |
           chmod 600 ~/.ssh/private.key
           sudo ssh-keygen -y -f ~/.ssh/private.key > ~/.ssh/public.key
-          ssh-copy-id -i ~/.ssh/id_rsa.pub hamza@192.168.100.71
+          ssh-copy-id -i ~/.ssh/public.key hamza@192.168.100.71
           sudo ssh-keyscan -t rsa "192.168.100.71" >> ~/.ssh/known_hosts || echo "Failed to add host key"
           cat ~/.ssh/known_hosts
 
