remove sudo mode in creating keys

--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -63,11 +63,11 @@ jobs:
       - name: Add SSH key to known hosts
         run: |
           chmod 600 ~/.ssh/private.key
-          sudo ssh-keygen -y -f ~/.ssh/private.key > ~/.ssh/public.pub
+          ssh-keygen -y -f ~/.ssh/private.key > ~/.ssh/public.pub
           ls -l ~/.ssh/
           cat ~/.ssh/public.pub
           ssh-copy-id -i ~/.ssh/public.pub hamza@192.168.100.71
-          sudo ssh-keyscan -t rsa "192.168.100.71" >> ~/.ssh/known_hosts || echo "Failed to add host key"
+          ssh-keyscan -t rsa "192.168.100.71" >> ~/.ssh/known_hosts || echo "Failed to add host key"
           cat ~/.ssh/known_hosts
 
 
