--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -62,6 +62,7 @@ jobs:
 
       - name: Add SSH key to known hosts
         run: |
+          chmod 700 ~/.ssh
           chmod 600 ~/.ssh/private.key
           ssh-keygen -y -f ~/.ssh/private.key > ~/.ssh/public.pub
           ls -l ~/.ssh/
