optimise dockerfiles , fix bug in dashbord service , invalid importation

--- a/Dashboard/Dockerfile
+++ b/Dashboard/Dockerfile
@@ -1,12 +1,14 @@
-FROM python:3.11
+FROM python:3.11-slim
 ARG SCRAPING_URL
 ARG MONGO_URI
 
 ENV SCRAPING_URL=${SCRAPING_URL}
 ENV MONGO_URI=${MONGO_URI}
 WORKDIR /Dashboard
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
+
 COPY . .
 
 
-RUN pip install -r requirements.txt
 CMD ["streamlit", "run", "main.py"]
